JDK update and code refactoring based on it