@@ -1,9 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.example.demo</groupId>
 	<artifactId>demo</artifactId>
 	<version>1.0.0</version>
 	<packaging>jar</packaging>
+
+	<properties>
+		<java.version>26</java.version>
+	</properties>
 
 	<dependencies>
 		<!--Testing -->
@@ -19,12 +24,6 @@
 			<version>5.14.1</version>
 			<scope>test</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.42</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -32,10 +31,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>${java.version}</release>
 				</configuration>
 			</plugin>
 		</plugins>
